Adding extra note to tool description

--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -13,7 +13,7 @@
             </a>
             <hr>
             <p class="px-2">
-                Various operations that can be performed on any kind of text string. By default all changes are based on what you enter into the textarea. By selecting "Chain commands" this shifts to the results section at the bottom, you can then perform actions in succession. E.g. Strip spaces from a string, then select Remove all numbers and both will be performed. 
+                Various operations that can be performed on any kind of text string. By default all changes are based on what you enter into the textarea. By selecting "Chain commands" this shifts to the results section at the bottom, you can then perform actions in succession. E.g. Strip spaces from a string, then select Remove all numbers and both will be performed. Preserve spaces will only work on tools marked with an asterisk [*].
             </p>
         </div>
         <div class="collapse" id="{{ filename }}Collapse">
@@ -36,14 +36,14 @@
                                             <option value="reverse">Reverse</option>
                                             <option value="uppercase">Uppercase</option>
                                             <option value="lowercase">Lowercase</option>
-                                            <option value="uppercaseonly">Uppercase only</option>
-                                            <option value="lowercaseonly">Lowercase only</option>
-                                            <option value="numbersonly">Numbers only</option>
-                                            <option value="lettersonly">Letters only</option>
-                                            <option value="specialcharsonly">Special characters only</option>
+                                            <option value="uppercaseonly">Uppercase only *</option>
+                                            <option value="lowercaseonly">Lowercase only *</option>
+                                            <option value="numbersonly">Numbers only *</option>
+                                            <option value="lettersonly">Letters only *</option>
+                                            <option value="specialcharsonly">Special characters only *</option>
                                             <option value="removenumbers">Remove all numbers</option>
                                             <option value="removeletters">Remove all letters</option>
-                                            <option value="stripspecialchars">Remove all special characters</option>
+                                            <option value="stripspecialchars">Remove all special characters *</option>
                                             <option value="alphabet">Letters to alphabet number</option>
                                             <option value="unique">Unique characters</option>
                                             <option value="urlencode">URL Encode</option>
