Adding max height to the results area, in the event of large amounts of data being generated

--- a/_includes/partials/home/frequencies.liquid
+++ b/_includes/partials/home/frequencies.liquid
@@ -31,7 +31,7 @@
                         </div>
                         <hr />
                         <div class="">
-                            <div class="grid g-4 my-1 data-to-copy active" id="{{ filename }}Results"></div>
+                            <div class="grid g-4 my-1 data-to-copy active convrtr-results" id="{{ filename }}Results"></div>
                         </div>
                     </div>
                 </div>
