--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                         <hr>
-                        <div id="textResults" class="data-to-copy active"></div>
+                        <div id="textResults" class="data-to-copy active convrtr-results"></div>
                     </div>
                 </div>
             </div>
