--- a/_includes/partials/misc/elements.liquid
+++ b/_includes/partials/misc/elements.liquid
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <hr>
-                        <div id="elementResults" class="data-to-copy active"></div>
+                        <div id="elementResults" class="data-to-copy active convrtr-results"></div>
                     </div>
                 </div>
             </div>
