--- a/_includes/partials/oni/strings.liquid
+++ b/_includes/partials/oni/strings.liquid
@@ -43,7 +43,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
                     {%- endcomment -%}
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div class="data-to-copy active"></div>
+                        <div class="data-to-copy active convrtr-results"></div>
                     </div>
                 </div>
             </div>
