--- a/_includes/partials/oni/unscramble.liquid
+++ b/_includes/partials/oni/unscramble.liquid
@@ -13,7 +13,7 @@
             </a>
             <hr>
             <p class="px-2">
-                Unscrambles a string by interleaving its characters. For example: <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2 data-to-copy active">abcdef</code> → <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2 data-to-copy active">badcfe</code>
+                Unscrambles a string by interleaving its characters. For example: <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">abcdef</code> → <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2 data-to-copy active">badcfe</code>
             </p>
         </div>
         <div class="collapse" id="{{ filename }}Collapse">
