--- a/_includes/partials/ciphers/caesar.liquid
+++ b/_includes/partials/ciphers/caesar.liquid
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
                     </div>
                 </div>
             </div>
