--- a/_includes/partials/ciphers/hash.liquid
+++ b/_includes/partials/ciphers/hash.liquid
@@ -37,7 +37,7 @@
                                         <th scope="col">Value</th>
                                     </tr>
                                 </thead>
-                                <tbody class="data-to-copy active" id="{{ filename }}Results">
+                                <tbody class="data-to-copy active convrtr-results" id="{{ filename }}Results">
                                     <tr class="visually-hidden">
                                         <td colspan="2" class="text-center">No data available</td>
                                     </tr>
