--- a/_includes/partials/ciphers/substitution.liquid
+++ b/_includes/partials/ciphers/substitution.liquid
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
                     </div>
                 </div>
             </div>
