--- a/_includes/partials/hex/hexfrequencies.liquid
+++ b/_includes/partials/hex/hexfrequencies.liquid
@@ -43,7 +43,7 @@
                         </div>
                         <hr />
                         <div class="">
-                            <div class="grid g-4 my-1 data-to-copy active" id="{{ filename }}Results"></div>
+                            <div class="grid g-4 my-1 data-to-copy active convrtr-results" id="{{ filename }}Results"></div>
                         </div>
                     </div>
                 </div>
