--- a/_includes/partials/home/flip.liquid
+++ b/_includes/partials/home/flip.liquid
@@ -34,7 +34,7 @@
                             {% include "components/select-copy-dl" %}
                         </div>
                         <hr />
-                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
                     </div>
                 </div>
             </div>
