--- a/_includes/partials/misc/braille.liquid
+++ b/_includes/partials/misc/braille.liquid
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
                         <div id="{{ filename }}ImageResults" class="braille"></div>
                     </div>
                 </div>
