--- a/_includes/partials/misc/forerunner.liquid
+++ b/_includes/partials/misc/forerunner.liquid
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
                         <div id="{{ filename }}ImageResults" class="forerunner"></div>
                     </div>
                 </div>
