--- a/_includes/partials/oni/interleave.liquid
+++ b/_includes/partials/oni/interleave.liquid
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div class="data-to-copy active"></div>
+                        <div class="data-to-copy active convrtr-results"></div>
                     </div>
                 </div>
             </div>
