--- a/scss/style.scss
+++ b/scss/style.scss
@@ -458,6 +458,11 @@ code {
     }
 }
 
+.convrtr-results {
+    overflow: hidden auto;
+    max-height: 24rem;
+}
+
 .nav-pills {
     .nav-link {
     --bs-nav-link-padding-y: 0.625rem;
