New feature: Periodic table of elements
Interactive gird, clicking on a button will pull back information about that element into a table below

--- a/_includes/partials/misc/elements.liquid
+++ b/_includes/partials/misc/elements.liquid
@@ -17,6 +17,11 @@
                 Only a subset of element properties are available for conversion. Strings can be separated using a number of different delimiters: 
                 space, comma, colon, semi-colon, and hyphen. You can mix and match delimiters, but they are required.
             </p>
+            <blockquote>
+                <p class="ms-2 fst-italic">Data sourced from <a href="https://github.com/Bowserinator/Periodic-Table-JSON" class="text-convrtr">Bowserinator / Periodic-Table-JSON</a> under the <a
+                        href="https://creativecommons.org/licenses/by-sa/3.0/" class="text-convrtr">Creative Commons Attribution-ShareAlike 3.0
+                        License</a>.</p>
+            </blockquote>
         </div>
         <div class="collapse" id="{{ filename }}Collapse">
             <div class="col">
