--- a/_includes/partials/misc/elementstable.liquid
+++ b/_includes/partials/misc/elementstable.liquid
@@ -46,7 +46,7 @@
                             {% include "components/select-copy-dl" %}
                         </div>
                         <hr />
-                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results p-2"></div>
                     </div>
                 </div>
             </div>
