Updated Smithy description

--- a/_includes/partials/ciphers/smithy.liquid
+++ b/_includes/partials/ciphers/smithy.liquid
@@ -13,7 +13,7 @@
             </a>
             <hr>
             <p class="px-2">
-                Smithy is interesting cipher, built using the fibonacci sequence as part of the process. For example: 
+                Smithy is interesting cipher, built using the fibonacci sequence as part of the keyword ecryption/decryption process. It was originally made for private amusement, and included in documentation in The Da Vinci Code copyright case. For example: 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">TEST SENTENCE</code> encrypted with a key of <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">WORD</code> would shift like: 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">DGYM UKGDGTVO</code> 
 
