--- a/_includes/layout/scripts.liquid
+++ b/_includes/layout/scripts.liquid
@@ -2,12 +2,12 @@
 <script src="../assets/js/core/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="../assets/js/theme.js"></script>
 {%- if page-id != "fourohfour" %}
-<script src="../assets/js/clip.js"></script>
-<script src="../assets/js/toolkit.js"></script>
-<script src="../assets/js/tools.js"></script>
-<script src="../assets/js/rot.js"></script>
-<script src="../assets/js/scripts.js"></script>
-{% assign dynamicJSPath = "../assets/js/" | append: page-id | append: "/" | append: page-id | append: ".js" %}
-{% if page-id == "home" -%}<script src="../assets/js/home/convrtrs.js"></script>{%- endif %}
-{% if dynamicJSPath | assetExists -%}<script src="{{ dynamicJSPath }}"></script>{%- endif %}
+<script type="module" src="../assets/js/clip.mjs"></script>
+<script type="module" src="../assets/js/toolkit.mjs"></script>
+<script type="module" src="../assets/js/tools.mjs"></script>
+<script type="module" src="../assets/js/rot.mjs"></script>
+<script type="module" src="../assets/js/scripts.mjs"></script>
+{% assign dynamicJSPath = "../assets/js/" | append: page-id | append: "/" | append: page-id | append: ".mjs" %}
+{% if page-id == "home" -%}<script type="module" src="../assets/js/home/convrtrs.mjs"></script>{%- endif %}
+{% if dynamicJSPath | assetExists -%}<script type="module" src="{{ dynamicJSPath }}"></script>{%- endif %}
 {%- endif -%}
