Overhaul of reverse hex functionality
"Nibbles" wasn't entirely the correct terminology for what I was previously doing with reversals.

Added in a proper nibble reverse function
Renamed other commands to make them better suit functionality
Added a dropdown to choose between the three reversing functions
Better error handling
Added proper delimiter support to all functions, to ensure if no delimiter is specified then it defaults to splitting by 2 characters
Updated and improved js doc comments
Added chain command support for reversing, so you can navigate between all 3

--- a/_includes/partials/hex/hexfrequencies.liquid
+++ b/_includes/partials/hex/hexfrequencies.liquid
@@ -15,6 +15,9 @@
             <p class="px-2">
                 For a given string of Hexadecimal, list out the frequencies of various hex combinations. This can be useful when looking at data-driven puzzles, and trying to find recognizable patterns.
             </p>
+            <p class="px-2">
+                The dropdown allows you to select a delimiter, which is how your hex values are split up and joined together. The default is a space, you can select no delimiter if your hex contains no spaces. This will default the split to every 2 characters. Negative numbers are allowed.
+            </p>
         </div>
         <div class="collapse" id="{{ filename }}Collapse">
             <div class="col">
